--- a/DinerMax3000BusinessLayer/app.config
+++ b/DinerMax3000BusinessLayer/app.config
@@ -7,4 +7,22 @@
             connectionString="Data Source=.\main;Initial Catalog=DinerMax3000;Persist Security Info=True;User ID=SA;Password=Nike22"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="WeatherSoap" />
+            </basicHttpBinding>
+            <customBinding>
+                <binding name="WeatherSoap12">
+                    <textMessageEncoding messageVersion="Soap12" />
+                    <httpTransport />
+                </binding>
+            </customBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://wsf.cdyne.com/weatherws/weather.asmx"
+                binding="basicHttpBinding" bindingConfiguration="WeatherSoap"
+                contract="CDyne.WeatherSoap" name="WeatherSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
